# Sands

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE-code.txt  LICENSE-media.txt  README.md  Sands.sln  Sands.toml  icon.svg.import  packer.bat  packer.sh  project.godot  textures.assets
Properties/: launchSettings.json
assets/materials/: missing.tres  pixel.tres  sandbrick.tres
assets/materials/shader/: terrain.gdshader
components/: beta_terrain.tscn  controllable_character.tscn  debug_ui.tscn  pixel_camera.tscn  simple_cube.tscn  voxel_terrain.tscn
logic/interaction/: movement.cs  player.cs
logic/tile/: Tile.cs
logic/ui/: debug_left.cs  debug_server.cs
logic/world/: voxel_terrain_generator.cs  world_data.cs
logic/world/generators/: IWorldGenerator.cs  repetition_generator.cs
sands/: Cargo.toml
src/: heatwave.rs  logging.rs  main.rs  sands.rs
src/heatwave/: prelude.rs  window.rs
src/old_cs/tile/: TileRegistry.cs
src/old_cs/world/: voxel_terrain_generator.cs
src/sands/: shaders.rs
worlds/: overworld.tscn  pixelate.tres
