[package]
name = "sands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
once_cell = "1.18.0"
raw-window-handle = "0.6.0"
vulkano = "0.34.1"
vulkano-shaders = "0.34.0"
winit = "0.28.2"
