[package]
name = "sands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
colored = "2.0.4"
image = "0.24.7"
log = { version = "0.4.20", features = ["std"] }
once_cell = "1.18.0"
path-absolutize = "3.1.1"
raw-window-handle = "0.6.0"
vulkano = "0.34.1"
vulkano-shaders = "0.34.0"
winit = "0.28.2"
